--- a/package.json
+++ b/package.json
@@ -5,38 +5,54 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^10.2.1",
     "@react-native-community/async-storage": "^1.11.0",
     "expo": "~38.0.8",
+    "expo-file-system": "~9.0.1",
     "expo-font": "^8.2.2",
+    "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "^8.2.1",
+    "expo-location": "~8.2.1",
+    "expo-permissions": "~9.0.1",
+    "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.27.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^3.11.1",
     "react-navigation-header-buttons": "^3.0.1",
     "react-redux": "^7.1.0",
+    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "expo-image-picker": "~8.3.0",
-    "expo-permissions": "~9.0.1",
-    "expo-file-system": "~9.0.1",
-    "expo-sqlite": "~8.2.1",
-    "expo-location": "~8.2.1",
-    "react-native-maps": "0.27.1"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "jest": "^26.4.2",
+    "jest-expo": "^39.0.0",
+    "jest-fetch-mock": "^3.0.3",
+    "react-native-testing-library": "^6.0.0",
+    "redux-mock-store": "^1.5.4"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base)"
+    ],
+    "automock": false
+  }
 }
